# python-boilerplate

./: .flake8  .gitignore  README.md  noxfile.py  pyproject.toml
src/example_cli/: cat_fact_model.py  console.py
tests/: test_cat_fact_model.py  test_console.py
