[tool.poetry]
name = "example_cli"
description = "A boilerplate python cli project"
license = "MIT"
version = "0.1.0"
authors = ["Ben P <18192544+benp44@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
coverage = {version = "^5.1", extras = ["toml"]}
pytest-cov = "^2.9.0"
pytest-mock = "^3.1.0"
black = "^19.10b0"
flake8 = "^3.8.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"

[tool.poetry.scripts]
example-cli = "example_cli.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["example_cli"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line_length = 150
